--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@tailwindcss/forms": "^0.5.7",
+    "faker": "^5.5.3",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
