--- a/package.json
+++ b/package.json
@@ -18,20 +18,36 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "@mux/mux-node": "^7.3.0",
+    "@mux/mux-player-react": "^1.11.0",
+    "@mux/spaces-web": "1.2.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/node": "^20.10.4",
     "axios": "^1.6.2",
     "faker": "^5.5.3",
+    "http-status-codes": "^2.3.0",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "loglevel": "^1.8.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.4.1",
     "react-i18next": "^13.3.1",
-    "react-router-dom": "^6.19.0"
+    "react-icons": "^4.12.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.19.0",
+    "sharp": "^0.31.3",
+    "use-sound": "^4.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/faker": "^6.6.9",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
