--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mux/spaces-web": "1.2.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.10.4",
+    "@types/simple-peer": "^9.11.8",
     "axios": "^1.6.2",
     "faker": "^5.5.3",
     "http-status-codes": "^2.3.0",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.0",
     "loglevel": "^1.8.1",
     "moment": "^2.29.4",
+    "peerjs": "^1.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.4.1",
@@ -39,12 +41,15 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
     "sharp": "^0.31.3",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.7.2",
     "use-sound": "^4.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/faker": "^6.6.9",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/peerjs": "^1.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.1",
