--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/node": "^20.10.4",
     "@types/simple-peer": "^9.11.8",
     "axios": "^1.6.2",
-    "faker": "^5.5.3",
     "http-status-codes": "^2.3.0",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -34,10 +33,12 @@
     "moment": "^2.29.4",
     "peerjs": "^1.5.2",
     "react": "^18.2.0",
+    "react-beforeunload": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.4.1",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
     "sharp": "^0.31.3",
@@ -51,6 +52,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/peerjs": "^1.1.0",
     "@types/react": "^18.2.15",
+    "@types/react-beforeunload": "^2.1.4",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -61,6 +63,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
